@startuml modelo_conceptual
skinparam backgroundColor #FFFFFE
skinparam entity {
    BackgroundColor #E6F3FF
    BorderColor #2E86AB
}
skinparam note {
    BackgroundColor #FFF2CC
    BorderColor #D6B656
}

title Modelo Conceptual - Sistema de Gestión de Barberías

' === ENTIDADES PRINCIPALES ===

entity CLIENTE {
    email
    password_hash
    nombre
    apellido
    telefono
    dni
    direccion
    fecha_nacimiento
    preferencias
    puntos_fidelidad
    fecha_primera_visita
    estado
    fecha_registro
    ultimo_acceso
}

entity ADMINISTRADOR {
    email
    password_hash
    nombre
    apellido
    telefono
    dni
    nivel_acceso
    permisos_especiales
    estado
    fecha_registro
    ultimo_acceso
}

entity BARBERIA {
    nombre
    direccion
    telefono
    email
    horario_apertura
    horario_cierre
    latitud
    longitud
    estado
    fecha_registro
}

entity BARBERO {
    email
    password_hash
    nombre
    apellido
    telefono
    dni
    especialidades
    experiencia_años
    calificacion_promedio
    estado
    fecha_ingreso
    fecha_registro
    ultimo_acceso
}

entity SERVICIO {
    nombre
    descripcion
    duracion_minutos
    precio
    categoria
    estado
}

entity RESERVA {
    fecha_hora
    duracion_estimada
    precio_acordado
    estado
    notas_cliente
    notas_barbero
    fecha_creacion
    fecha_confirmacion
    fecha_completada
}

entity PROMOCION {
    nombre
    descripcion
    descuento_porcentaje
    descuento_monto
    fecha_inicio
    fecha_fin
    max_usos
    usos_actuales
    estado
}

entity CALIFICACION {
    puntuacion_servicio
    puntuacion_barbero
    comentario
    fecha_calificacion
}

' === RELACIÓN ASOCIATIVA ===
entity BARBERO_SERVICIO {
    activo
}

' === RELACIONES ===
ADMINISTRADOR ||--o{ BARBERIA : "ADMINISTRA"
BARBERIA ||--o{ BARBERO : "EMPLEA"
BARBERIA ||--o{ SERVICIO : "OFRECE"
BARBERIA ||--o{ PROMOCION : "PUBLICA"

BARBERO }o--o{ BARBERO_SERVICIO : "PUEDE_REALIZAR"
SERVICIO }o--o{ BARBERO_SERVICIO : "ES_ASIGNADO_A"

CLIENTE ||--o{ RESERVA : "REALIZA"
BARBERO_SERVICIO ||--o{ RESERVA : "SE_RESERVA"

RESERVA ||--o| CALIFICACION : "RECIBE"


@enduml